--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
   cloud_firestore: ^5.6.3
-
   flutter_bloc: ^8.1.1
   equatable: ^2.0.3
   http: ^0.13.5
+  material_design_icons_flutter: ^5.0.5955
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/accueil.PNG
+     - assets/images/menu.PNG
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
